--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:8889/spring_web_blog?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:mysql://${MYSQL_HOST:localhost}:8889/spring_web_blog?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC}
 #  &serverTimezone=UTC&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=${JDBC_DATABASE_USERNAME:root}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD:root}
